--- a/trash/default.yaml
+++ b/trash/default.yaml
@@ -66,19 +66,16 @@ switcher:
 # {"commit_raw_input_and_send_enter", kCommitRawInputAndSendEnter},
 # {"confirm_and_send_space", kConfirmAndSendSpace},
 # {"confirm_and_send_enter", kConfirmAndSendEnter},
-# {"commit_raw_input", kCommitRawInput},
-# {"confirm", kConfirm},
 # {NULL, kAsciiModeSwitchNoop}};
-
+nihcnihc nih
 ascii_composer:
   good_old_caps_lock: true  # true | false
   switch_key: 
-    # Caps_Lock: clear      # commit_code | commit_text | clear
-    Shift_L: commit_raw_input  # commit_code | commit_text | inline_ascii | clear | noop
-    Shift_R: commit_raw_input_and_send_space         # commit_code | commit_text | inline_ascii | clear | noop
-    Control_L: commit_raw_input       # commit_code | commit_text | inline_ascii | clear | noop
-    Control_R: commit_raw_input       # commit_code | commit_text | inline_ascii | clear | noop
-    
+    Caps_Lock: clear      # commit_code | commit_text | clear
+    Shift_L: noop  # commit_code | commit_text | inline_ascii | clear | noop
+    Shift_R: noop         # commit_code | commit_text | inline_ascii | clear | noop
+    Control_L: noop       # commit_code | commit_text | inline_ascii | clear | noop
+    Control_R: noop       # commit_code | commit_text | inline_ascii | clear | noop
 
 
 ###################################################################################
